Fixed body jump issue on modal open

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -68,3 +68,7 @@ body {
 .text-center {
 	text-align: center;
 }
+
+body.modal-open {
+	margin-right: 0 !important;
+}
